# xmms

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  adplug-xmms.cc  adplug-xmms.spec  adplug-xmms_mdk.spec  configure.in
src/: Makefile.am  adplug-xmms.cc
